[package]
name = "pulldown-cmark-m6"
version = "1.0.0"
authors = ["minghu6 <a19678zy@gmail.com>"]
license = "MIT"
description = "A fork from pulldown-cmark by minghu6"
repository = "https://github.com/minghu6/pulldown-cmark"
keywords = ["markdown", "commonmark"]
categories = ["text-processing"]
edition = "2021"
readme = "README.md"
exclude = ["/third_party/**/*", "/tools/**/*", "/specs/**/*", "/fuzzer/**/*", "/azure-pipelines.yml"]

build = "build.rs"

[[bin]]
name = "pulldown-cmark-m6"
required-features = ["getopts"]
doc = false

[[bench]]
name = "html_rendering"
harness = false

[[bench]]
name = "lib"
harness = false

[[bench]]
name = "markdown-it"
harness = false

[dependencies]
bitflags = "1.3"
unicase = "2.6"
memchr = "2.5"
getopts = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"


[dev-dependencies]
html5ever = "0.25"
markup5ever_rcdom = "0.1"
lazy_static = "1.4"
tendril = "0.4"
criterion = "0.3"
regex = "1.6"
serde_json = "1.0.61"
bincode = "1.3.1"

[features]
default = ["getopts"]
gen-tests = []
simd = []

[lib]
name = "pulldown_cmark"
